# battle_sim

./: .gitattributes  .gitignore  Cargo.toml  README.md  combatants.json  realistic_cities_with_climate.csv
output_data/: analysis_batch_0.txt  analysis_batch_1.txt  analysis_batch_2.txt  analysis_batch_3.txt  analysis_batch_4.txt  analysis_batch_5.txt  analysis_batch_6.txt  analysis_batch_7.txt  analysis_batch_8.txt  analysis_batch_9.txt
research/: Battle-Simulation-Rules-and-Language_Recommendations.md  Gorilla-vs-Human-Ethics-Analysis.md  Human-vs-Gorilla-Characteristics.md
src/: combatants.json  lib.rs  main.rs
src/agents/: mod.rs
src/analysis/: mod.rs
src/arena/: mod.rs
src/causal/: mod.rs
src/character_profiles/: mod.rs
src/combatants/: mod.rs
src/engine/: mod.rs
src/environment/: mod.rs
src/models/: mod.rs
src/output/: mod.rs
src/simulation/: mod.rs
