[package]
name = "battle_sim"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A battle simulation for 100 vs 1 unarmed combat scenarios"

[dependencies]
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rayon = "1.8"
csv = "1.3"
